--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.3"
 authors = ["Mason Ginter <mason@dagint.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
-
+description = "Utility crate for getting xkcd and explainxkcd entries"
+readme = "README.md"
+repository = "https://github.com/Hpmason/xkcd-utils"
+keywords = ["xkcd"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
